tests/NormalTests/paczka2/big_fuzzy/55054244.err
Error in line 4: 2JfHR S158 93,14
Error in line 7: A872 S855 46,3
Error in line 2: SOF09cYc A532 3,2
Error in line 15: SOF09cYc A87" 38,7
Error in line 20: hY6q244AG A532 130,8
Error in line 21: Bodm3naF0W S855 59,6
Error in line 1: 2JfHR A532 70,2
Error in line 16: SOF09cYc A872 90,6
Error in line 27: 2JfHR S158 67,2
Error in line 28: SOF09cYc S855 9,4
Error in line 29: 2JfHR S855 39,1
Error in line 36: 2JfHR S158 24,1
Error in line 48: SOF09cYc A532 6,2
Error in line 51: 2JfHR A532 -1,9
Error in line 58: hY6q244AG A532 54,0
Error in line 64: A872 A532 98,9
Error in line 77: LBlgeGk0h A532 90,1
Error in line 86: LBlgeGk0h A872 73,52
Error in line 81: LBlgeGk0h A872 62,6
Error in line 85: Bodm3naF0W A872 81,8
Error in line 99: A872 A532 99,7
Error in line 110: Bodm3naF0W S855 35,0
Error in line 117: hY6q244AG S855 -2,7
Error in line 115: hY6q244AG S855 33,6
Error in line 111: 2JfHR S158 19,2
Error in line 126: hY6q244AG A532 78,0
Error in line 125: Cgpj A872 190,0
Error in line 157: Bodm3naF0W A872 6,7
Error in line 165: LBlgeGk0h S855 91,6
Error in line 162: A872 S855 40,4
Error in line 156: Cgpj S158 48,1
Error in line 179: hY6q244AG S855 55,1
Error in line 193: SOF09cYc S855 26,76
Error in line 192: SOF09cYc S855 41,0
Error in line 188: A872 A872 15,6
Error in line 199: Cgpj S158 80,0
Error in line 203: Cgpj S855 58,1
Error in line 207: Cgpj A872 98,3
Error in line 211: LBlgeGk0h A532 219,1
Error in line 227: SOF09cYc S855 42,9
Error in line 229: Bodm3naF0W A872 59,3
Error in line 230: Bodm3naF0W S158 61,2
Error in line 233: Bodm3naF0W A532 97,4
Error in line 236: A872 S158 241,1
Error in line 241: A872 S855 41,6
Error in line 238: hY6q244AG A872 0,8
